--- a/site/css/novaDashboard.css
+++ b/site/css/novaDashboard.css
@@ -284,8 +284,11 @@
   height: 200px;
   width: 350px;
   margin-top: 50px;
+  margin-bottom: 50px;
   border-radius: 15px;
   border: solid black 1px;
+  font-size: 2rem;
+  font-weight: 700;
 }
 
 #div_alerta button {
@@ -293,7 +296,7 @@
   background-color: #0a8cbf;
   color: white;
   cursor: pointer;
-  padding: 8px;
+  padding: 8px 30px;
   border-radius: 5px;
   font-weight: 500;
 }
