--- a/site/css/estiloCalculadora.css
+++ b/site/css/estiloCalculadora.css
@@ -58,72 +58,73 @@ header {
     justify-content: space-between;
     align-items: center;
     height: 100%;
-    width: 700px;
-
+    width: 45%;
+    margin: 0;
+    padding: 0;
 
     li {
-      font-size: 20px;
+      font-size: 1rem;
       color: black;
       text-decoration: none;
-      transition: color 0.3s ease-in-out, transform 0.3s ease-in-out;
-
-      &:hover {
-        transform: scale(1.05);
-        color: #0A8CBF;
-      }
 
       a {
-        color: black;
+        color: #051b24;
         text-decoration: none;
         transition: color 0.2s ease-in-out, transform 0.2s ease-in-out;
 
         &:hover {
-          transform: scale(1.03);
+          transform: scale(1.01);
           color: #0A8CBF;
         }
       }
     }
   }
+
 
   .entrar {
     display: flex;
-    justify-content: flex-end;
+    width: 280px;
     height: 100%;
-    width: 100px;
     align-items: center;
+    justify-content: space-between;
 
-    img {
-      width: 50px;
-      height: 50px;
-      transition: color 0.3s ease-in-out, transform 0.3s ease-in-out;
-
-    }
-
-    li {
-      font-size: 20px;
-      color: black;
-      text-decoration: none;
-      transition: color 0.3s ease-in-out, transform 0.3s ease-in-out;
+    .login {
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      width: 122px;
+      height: 37px;
+      border-radius: 50px;
+      background-color: #0A8CBF;
+      color: #e3e3e3;
+      transition: color 0.2s ease-in-out, transform 0.2s ease-in-out;
 
       &:hover {
-        transform: scale(1.05);
-        color: #0A8CBF;
+        transform: scale(1.01);
+        background-color: #41a8d1;
+      }
+    }
+
+    .registrar {
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      width: 120px;
+      height: 35px;
+      border-radius: 50px;
+      border: 2px solid #0A8CBF;
+      color: #0A8CBF;
+      transition: color 0.2s ease-in-out, transform 0.2s ease-in-out;
+
+      &:hover {
+        transform: scale(1.01);
+        border: 2px solid #41a8d1;
+        color: #41a8d1;
       }
 
-      a {
-        color: black;
-        text-decoration: none;
-        transition: color 0.2s ease-in-out, transform 0.2s ease-in-out;
-
-        &:hover {
-          transform: scale(1.03);
-          color: #0A8CBF;
-        }
-      }
     }
   }
 }
-
 
 .lugar {
   width: 100%;
