--- a/site/css/index.css
+++ b/site/css/index.css
@@ -6,6 +6,7 @@ html, body {
     font-family: 'Rubik', sans-serif;
     scroll-padding-top: 80px;
     background-color: #F0F6F5;
+    font-size: 16px;
 
 }
 
@@ -60,68 +61,70 @@ header {
         justify-content: space-between;
         align-items: center;
         height: 100%;
-        width: 700px;
-
+        width: 45%;
+        margin: 0;
+        padding: 0;
 
         li {
-            font-size: 20px;
+            font-size: 1rem;
             color: black;
             text-decoration: none;
-            transition: color 0.3s ease-in-out, transform 0.3s ease-in-out;
-
-            &:hover {
-                transform: scale(1.05);
-                color: #0A8CBF;
-            }
 
             a {
-                color: black;
+                color: #051b24;
                 text-decoration: none;
                 transition: color 0.2s ease-in-out, transform 0.2s ease-in-out;
 
                 &:hover {
-                    transform: scale(1.03);
+                    transform: scale(1.01);
                     color: #0A8CBF;
                 }
             }
         }
     }
 
+
     .entrar {
         display: flex;
-        justify-content: flex-end;
+        width: 280px;
         height: 100%;
-        width: 100px;
         align-items: center;
+        justify-content: space-between;
 
-        img {
-            width: 50px;
-            height: 50px;
-            transition: color 0.3s ease-in-out, transform 0.3s ease-in-out;
-
-        }
-
-        li {
-            font-size: 20px;
-            color: black;
-            text-decoration: none;
-            transition: color 0.3s ease-in-out, transform 0.3s ease-in-out;
+        .login {
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            width: 122px;
+            height: 37px;
+            border-radius: 50px;
+            background-color: #0A8CBF;
+            color: #e3e3e3;
+            transition: color 0.2s ease-in-out, transform 0.2s ease-in-out;
 
             &:hover {
-                transform: scale(1.05);
-                color: #0A8CBF;
+                transform: scale(1.01);
+                background-color: #41a8d1;
+            }
+        }
+
+        .registrar {
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            width: 120px;
+            height: 35px;
+            border-radius: 50px;
+            border: 2px solid #0A8CBF;
+            color: #0A8CBF;
+            transition: color 0.2s ease-in-out, transform 0.2s ease-in-out;
+
+            &:hover {
+                transform: scale(1.01);
+                border: 2px solid #41a8d1;
+                color: #41a8d1;
             }
 
-            a {
-                color: black;
-                text-decoration: none;
-                transition: color 0.2s ease-in-out, transform 0.2s ease-in-out;
-
-                &:hover {
-                    transform: scale(1.03);
-                    color: #0A8CBF;
-                }
-            }
         }
     }
 }
@@ -163,9 +166,8 @@ header {
                 margin: 0;
                 padding: 0;
                 text-shadow: 2px 2px 5px rgba(0, 0, 0, 0.7);
-                /* font-weight: bold; */
+                font-weight: 400;
             }
-
         }
 
         .dois {
@@ -173,12 +175,11 @@ header {
 
             p {
                 color: #F0F6F5;
-                font-size: 25px;
+                font-size: 1.5em;
                 text-align: center;
                 margin: 0;
                 padding: 0;
                 text-shadow: 2px 2px 5px rgba(0, 0, 0, 1);
-
 
                 span {
                     color: #0A8CBF;
@@ -189,7 +190,6 @@ header {
 }
 
 .simulador {
-    /* background-color: #F0F6F5; */
     border-top: 3px solid #0A8CBF;
     width: 100%;
     height: calc(100vh - 80px);
@@ -208,29 +208,30 @@ header {
 
         .texto {
             display: flex;
+            justify-content: center;
             flex-direction: column;
             width: 50%;
-            height: 90%;
-            padding: 3% 3% 0 3%;
-
+            height: 100%;
 
             h2 {
-                font-size: 60px;
-                width: 100%;
+                font-size: 3em;
+                padding: 0 1.3em;
                 margin: 0;
-                margin-bottom: 30px;
+                margin-bottom: 5%;
 
             }
 
             .botao {
+                margin: 0;
+                margin-left: 10%;
                 display: flex;
                 align-items: center;
                 justify-content: center;
                 background-color: #28a745;
                 color: #fff;
                 width: 200px;
-                height: 60px;
-                font-size: 20px;
+                height: 50px;
+                font-size: 1.1em;
                 font-weight: bold;
                 border-radius: 50px;
                 text-decoration: none;
@@ -261,27 +262,27 @@ header {
     display: flex;
     flex-direction: column;
     align-items: center;
-    /* background-color: #F0F6F5; */
-
 
     .titulo {
         background: linear-gradient(90deg, #0A8CBF, #5CCFE6);
         width: 100%;
         height: 30%;
         display: flex;
+        align-items: center;
+        justify-content: center;
         flex-direction: column;
         align-items: center;
         color: #F0F6F5;
 
         h1 {
-            font-size: 40px;
-            margin: 20px;
+            font-size: 2.5rem;
+            margin: 0 6%;
+
         }
 
         p {
-            font-size: 30px;
+            font-size: 1.5rem;
             margin: 0;
-            padding: 0;
 
         }
     }
@@ -294,15 +295,16 @@ header {
         width: 100%;
         height: 100%;
 
-
-
         .um, .dois, .tres {
-            width: 30%;
-            height: 80%;
+            width: 350px;
+            height: 370px;
             display: flex;
             flex-direction: column;
             align-items: center;
             transition: color 0.5s ease-in-out, transform 0.5s ease-in-out;
+            background-color: #e3e3e3;
+            border-radius: 10px;
+            box-shadow: 0px 6px 12px rgba(0, 0, 0, 0.3);
 
             &:hover {
                 transform: scale(1.03);
@@ -311,36 +313,33 @@ header {
             li {
                 list-style: none;
                 font-size: 20px;
-                text-align: center;
-                padding: 20px;
-                color: #0A8CBF;
+                padding: 5%;
+                color: #051b24;
             }
 
             .sensor {
                 margin-top: 30px;
-                width: 300px;
-                height: auto;
+                height: 200px;
+                width: auto;
 
             }
 
             .bancoDados {
-                width: 230px;
-                height: auto;
+                height: 200px;
+                width: auto;
+
             }
 
             .grafico {
-                margin-top: 10px;
-                width: 350px;
-                height: auto;
-            }
+                height: 200px;
+                width: auto;
 
+            }
         }
     }
-
 }
 
 .dashboard {
-    /* background-color: #F0F6F5; */
     width: 100%;
     height: calc(100vh - 80px);
     display: flex;
@@ -370,7 +369,7 @@ header {
 
             .titulo {
                 h1 {
-                    font-size: 40px;
+                    font-size: 2.3rem;
                     margin: 0;
                     padding: 0;
 
@@ -410,7 +409,6 @@ header {
     width: 100%;
     display: flex;
     align-items: center;
-    /* background-color: #F0F6F5; */
 
     .texto {
         width: 50%;
@@ -450,7 +448,6 @@ header {
             justify-content: center;
         }
 
-
         a {
             text-decoration: none;
 
@@ -461,17 +458,13 @@ header {
                 flex-direction: column;
                 align-items: center;
 
-
                 .circulo {
                     width: 150px;
                     height: 150px;
                     border-radius: 50%;
                     box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
                     background-size: cover;
-
                 }
-
-
 
                 p {
                     color: #ee169b;
@@ -485,7 +478,6 @@ header {
             .circulo {
                 background-image: url("../imgs\ -\ Home/aaron.png");
             }
-
         }
 
         .dois {
@@ -523,12 +515,14 @@ header {
 
 .footer {
     width: 100%;
-    height: calc(100vh - 80px);
+    height: 80vh;
     display: flex;
     flex-direction: column;
     align-items: center;
     background-color: #0A8CBF;
     list-style: none;
+    margin: 0;
+    padding: 0;
 
     .barrinha {
         width: 100%;
@@ -563,116 +557,116 @@ header {
 
     .links {
         width: 100%;
-        height: 30%;
+        height: 20%;
         display: flex;
         justify-content: center;
         align-items: center;
 
         .opcoes {
-            width: 50%;
-            height: 10%;
-            /* margin-left: 5%; */
+            width: 80%;
+            height: 50%;
             display: flex;
-            /* flex-direction: column; */
-            flex-wrap: wrap;
+            /* flex-wrap: wrap; */
             justify-content: space-around;
-
+            align-items: center;
 
             a {
                 color: #F0F6F5;
                 list-style: none;
                 text-decoration: none;
 
-            }
-        }
-
-        a {
-            text-decoration: none;
-
-
-            .download {
-                display: flex;
-                align-items: center;
-                justify-content: center;
-
-                span {
-                    color: #F0F6F5;
-
+                li {
+                    display: flex;
+                    align-items: center;
+                    justify-content: center;
                 }
 
-                img {
-                    margin-left: 10px;
-                    width: 30px;
-                    height: auto;
-                    cursor: pointer;
+
+                .download {
+                    display: flex;
+
+                    span {
+                        display: flex;
+                        align-items: center;
+                        color: #F0F6F5;
+
+                    }
+
+                    img {
+                        margin-left: 10px;
+                        width: 30px;
+                        height: auto;
+                        cursor: pointer;
+                    }
                 }
             }
         }
     }
 
-    .redes {
-        width: 100%;
-        height: 10%;
-        color: #F0F6F5;
+}
+
+.redes {
+    width: 100%;
+    height: 10%;
+    color: #F0F6F5;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+    .container {
         display: flex;
         align-items: center;
-        justify-content: center;
-
-        .container {
-            display: flex;
-            align-items: center;
-            justify-content: space-around;
-            width: 40%;
-            height: 100%;
-
-
-            p {
-                font-weight: bold;
-
-            }
-
-            img {
-                width: 25px;
-                height: auto;
-                cursor: pointer;
-            }
-        }
-    }
-
-    .texto {
-        width: 100%;
-        height: 40%;
+        justify-content: space-around;
+        width: 40%;
+        height: 100%;
 
         p {
-            height: 100%;
-            margin: 0;
-            padding: 2% 5% 0 5%;
-            height: 70%;
-            color: #F0F6F5;
-        }
-    }
-
-    .endereco {
-        width: 100%;
-        height: 10%;
-        display: flex;
-        justify-content: space-between;
-        align-items: center;
-
-        .rua {
-            margin: 0;
-            color: #F0F6F5;
-            margin-left: 5%;
+            font-weight: bold;
 
         }
 
-        .copy {
-            color: #F0F6F5;
-            margin: 0;
-            margin-right: 5%;
+        img {
+            width: 25px;
+            height: auto;
+            cursor: pointer;
         }
     }
 }
+
+.texto {
+    width: 100%;
+    height: 40%;
+
+    p {
+        height: 100%;
+        margin: 0;
+        padding: 2% 5% 0 5%;
+        height: 70%;
+        color: #F0F6F5;
+    }
+}
+
+.endereco {
+    width: 100%;
+    height: 30%;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+
+    .rua {
+        margin: 0;
+        color: #F0F6F5;
+        margin-left: 5%;
+
+    }
+
+    .copy {
+        color: #F0F6F5;
+        margin: 0;
+        margin-right: 5%;
+    }
+}
+
 
 .cookie {
     position: fixed;
@@ -707,8 +701,6 @@ header {
         border-radius: 50px;
         box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.2);
         transition: all 0.3s ease;
-
-
 
         &:hover {
             background-color: #218838;
