--- a/site/css/secoes.css
+++ b/site/css/secoes.css
@@ -5,6 +5,7 @@ html, body {
     padding: 0;
     font-family: 'Rubik', sans-serif;
     scroll-padding-top: 80px;
+    font-size: 16px;
 }
 
 .main-content {
@@ -58,68 +59,70 @@ header {
         justify-content: space-between;
         align-items: center;
         height: 100%;
-        width: 700px;
-
+        width: 45%;
+        margin: 0;
+        padding: 0;
 
         li {
-            font-size: 20px;
+            font-size: 1rem;
             color: black;
             text-decoration: none;
-            transition: color 0.3s ease-in-out, transform 0.3s ease-in-out;
-
-            &:hover {
-                transform: scale(1.05);
-                color: #0A8CBF;
-            }
 
             a {
-                color: black;
+                color: #051b24;
                 text-decoration: none;
                 transition: color 0.2s ease-in-out, transform 0.2s ease-in-out;
 
                 &:hover {
-                    transform: scale(1.03);
+                    transform: scale(1.01);
                     color: #0A8CBF;
                 }
             }
         }
     }
 
+
     .entrar {
         display: flex;
-        justify-content: flex-end;
+        width: 280px;
         height: 100%;
-        width: 100px;
         align-items: center;
+        justify-content: space-between;
 
-        img {
-            width: 50px;
-            height: 50px;
-            transition: color 0.3s ease-in-out, transform 0.3s ease-in-out;
-
-        }
-
-        li {
-            font-size: 20px;
-            color: black;
-            text-decoration: none;
-            transition: color 0.3s ease-in-out, transform 0.3s ease-in-out;
+        .login {
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            width: 122px;
+            height: 37px;
+            border-radius: 50px;
+            background-color: #0A8CBF;
+            color: #e3e3e3;
+            transition: color 0.2s ease-in-out, transform 0.2s ease-in-out;
 
             &:hover {
-                transform: scale(1.05);
-                color: #0A8CBF;
+                transform: scale(1.01);
+                background-color: #41a8d1;
+            }
+        }
+
+        .registrar {
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            width: 120px;
+            height: 35px;
+            border-radius: 50px;
+            border: 2px solid #0A8CBF;
+            color: #0A8CBF;
+            transition: color 0.2s ease-in-out, transform 0.2s ease-in-out;
+
+            &:hover {
+                transform: scale(1.01);
+                border: 2px solid #41a8d1;
+                color: #41a8d1;
             }
 
-            a {
-                color: black;
-                text-decoration: none;
-                transition: color 0.2s ease-in-out, transform 0.2s ease-in-out;
-
-                &:hover {
-                    transform: scale(1.03);
-                    color: #0A8CBF;
-                }
-            }
         }
     }
 }
@@ -153,18 +156,20 @@ header {
                 padding: 0;
                 font-size: 25px;
                 margin-bottom: 10px;
+                margin-left: 10%;
             }
 
             p {
                 margin: 0;
-                color: black;
-                font-size: 20px;
+                color: #051b24;
+                font-size: 1.3rem;
+        
             }
         }
 
         .imagem {
-            width: 600px;
-            height: 250px;
+            width: 50vw;
+            height: 40vh;
             border-radius: 40px 0 0 40px;
             background-image: url("../imagens/terra(1).jpg");
             background-size: cover;
@@ -186,19 +191,20 @@ header {
 
         .texto {
             display: flex;
-            margin-right: 100px;
             width: 600px;
             height: 140px;
+            margin-right: 10%;
+            margin-left: 5%;
 
             p {
-                color: black;
-                font-size: 20px;
+                color: #051b24;
+                font-size: 1.3rem;
             }
         }
 
         .imagem {
-            width: 600px;
-            height: 250px;
+            width: 50vw;
+            height: 40vh;
             border-radius: 0 40px 40px 0;
             background-image: url("../imagens/geãos\ de\ café.jpg");
             background-size: cover;
@@ -214,23 +220,13 @@ header {
     height: calc(100vh - 80px);
     width: 100%;
     display: flex;
-    /* flex-direction: column; */
-    /* align-items: center; */
-    /* justify-content: center; */
     background-color: #F0F6F5;
     padding-top: 80px;
 
-    /* .esquerda {
-        background-color: red;
-        width: 100%;
-        height: 150%;
-    } */
     .direita {
         width: 100%;
         height: 100%;
         display: flex;
-        /* align-items: center; */
-        /* justify-content: center; */
 
         .logo {
             width: 40%;
@@ -263,8 +259,8 @@ header {
             p {
                 width: 80%;
                 margin-top: 5px;
-                /* font-size: 1.3em; */
                 font-size: 3vh;
+                color: #051b24;
 
             }
 
